Fix z-index

--- a/src/css/_cards.scss
+++ b/src/css/_cards.scss
@@ -156,6 +156,7 @@
     align-items: center;
     padding: 4px;
     height: 50px;
+    z-index: 1;
 
     .label {
       font-size: 16px;
